@@ -1,3 +1,10 @@
+2004-05-26  Thomas Fitzsimmons  <fitzsim@redhat.com>
+
+	* jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c
+	(window_wm_protocols_filter): Remove function.
+	(create): Remove filter that removes WM_TAKE_FOCUS client
+	messages.
+
 2004-05-25  David Jee  <djee@redhat.com>
 
 	* java/awt/Container.java
